# jirahub

./: .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/jirahub/: index.rst
docs/source/: conf.py  index.rst
docs/source/_static/: theme_overrides.css
jirahub/: __init__.py  command_line.py  config.py  entities.py  github.py  githubquery.py  jira.py  jirahub.py  jiraquery.py  permissions.py  utils.py
jirahub/resources/: config_template.ini  config_template.py
jirahub/tests/: test_githubquery.py  test_jirahub.py  test_jiraquery.py
licenses/: LICENSE.rst
tests/: conftest.py  constants.py  mocks.py  test_command_line.py  test_config.py  test_entities.py  test_github.py  test_jira.py  test_jirahub.py  test_permissions.py  test_utils.py
tests/configs/: bad_config.ini  bad_config.py  fragment_config_base.ini  fragment_config_base.py  fragment_config_failing.py  fragment_config_overrides.ini  fragment_config_overrides.py  full_config.ini  full_config.py  incomplete_config.ini  incomplete_config.py  invalid_type_config.ini  minimal_config.ini  minimal_config.py
