[metadata]
name = jirahub
provides = jirahub
package_name = jirahub
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
description = A package for syncing JIRA tickets and GitHub issues
long_description = file: README.rst
url = https://github.com/spacetelescope/jirahub
github_project = spacetelescope/jirahub

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
setup_requires =
    setuptools >=41.0.1
    setuptools_scm >=3.3.3, <4
install_requires =
    jira >=2, <3
    pygithub >=1.43.7, <2

[options.extras_require]
dev =
    black >=19.3b0, <20
    flake8
    pytest >=5.0.1, <6
    pytest-cov >= 2.7.1, <3
    tox >=3.13.2, <4
docs =
    sphinx >2, <3
    sphinx_rtd_theme
    stsci_rtd_theme

[options.entry_points]
console_scripts =
    jirahub = jirahub.command_line:main

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, config_template.py, tests/configs

[tool:pytest]
testpaths = tests